[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/UpdateUI.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.760784 )

[node name="UpdateUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -350.0
margin_right = 1024.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="State" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 628.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 1 )
scroll_following = true

[node name="SwitchScene" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 632.0
margin_right = 1024.0
margin_bottom = 652.0
text = "Switch Scene"

[node name="RunServer" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 656.0
margin_right = 1024.0
margin_bottom = 676.0
text = "Run Server"

[node name="RunClient" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 680.0
margin_right = 1024.0
margin_bottom = 700.0
text = "Run Client"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/SwitchScene" to="." method="SwitchScene"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/RunServer" to="." method="RunUpdateServer"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/RunClient" to="." method="RunUpdateClient"]
